# stori

./: README.md  docker-compose.yml  pyproject.toml  setup.cfg
file_processor/: Dockerfile  notifier.py  processor.py  pyproject.toml
file_processor/src/: core_client.py  months.py  summary.py
file_processor/tests/: test_summary.py
stori/: Dockerfile  pyproject.toml
stori/core/: settings.py  urls.py  views.py
stori/core/templates/: base.html  index.html
stori/customer/: admin.py  models.py  serializers.py  urls.py  views.py
stori/customer/migrations/: 0001_initial.py  0002_alter_account_options.py  0003_customerdata_alter_account_options_and_more.py  0004_alter_customerdata_options.py
stori/customer/templates/: accounts.html
stori/customer/tests/: conftest.py  test_admin.py  test_models.py  test_serializers.py
stori/mailing/: admin.py  models.py  serializers.py  urls.py  views.py
stori/mailing/migrations/: 0001_initial.py  0002_alter_maildata_options_maildata_description.py  0003_alter_maildata_options_alter_maildata_subject.py  0004_alter_maildata_options.py
stori/mailing/templates/: mails_data.html
stori/mailing/tests/: conftest.py  test_admin.py  test_models.py  test_serializers.py
stori/transaction/: admin.py  models.py  serializers.py  urls.py  views.py
stori/transaction/migrations/: 0001_initial.py
task_manager/: Dockerfile  main.py  pyproject.toml
task_manager/api/: app.py  database.py  exceptions.py
task_manager/api/tasks/: __init__.py  resources.py  schema.py  status.py  task.py
task_manager/tests_api/tasks/: conftest.py  test_routes.py  test_schema.py  test_status.py  test_task.py
