[tool.poetry]
name = "file-processor"
version = "0.1.0"
description = "Its the file processor worker."
authors = ["Armando Ezequiel Puerta <armando.ezequiel.puerta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.4"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
