[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = "Its the async task manager"
authors = ["Armando Ezequiel Puerta <armando.ezequiel.puerta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
flask-restful = "^0.3.10"
celery = "^5.3.4"
flask-pymongo = "^2.3.0"
marshmallow = "^3.20.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
